--- a/views/search_index.ejs
+++ b/views/search_index.ejs
@@ -14,7 +14,7 @@
 		}
 		#map{
 			width: 100%;
-			height:70%;
+			height:75%;
 		}
 		body{
 			background-color: #e6e9ef;
@@ -118,7 +118,7 @@
 			var park_names = [];
 		  	park_names = <%- JSON.stringify(park_name)%>;
 			if(park_names.length==0)
-				res_title.innerHTML = "No park qualification for your search!";
+				res_title.innerHTML = "No park for your search!";
 			else{
 				if(state_q!="null")
 					if(activity_q!="null")
@@ -130,6 +130,7 @@
 						res_title.innerHTML = "Search result for National Park in America with activity: " + activity_q;
 					else
 						res_title.innerHTML = "Search result for National Park in America";
+					
 			}
 			function initMap() {
 				var bounds = new google.maps.LatLngBounds();  
@@ -178,6 +179,7 @@
 			  		count+=1;
 				  	var pos = {lat:parseFloat(latitude[i]),lng:parseFloat(longitude[i])};
 				  	marker = new google.maps.Marker({
+                        icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png',
 				        map:map,
 				        position:pos
 				    });
@@ -205,7 +207,6 @@
 				}
 				map.mapTypes.set(customMapTypeId, customMapType);
 				map.setMapTypeId(customMapTypeId);
-
 				if(park_names.length!=0){
 					google.maps.event.addListenerOnce(map, 'idle', function() {
 				        map.fitBounds(bounds);
