--- a/views/search_index.ejs
+++ b/views/search_index.ejs
@@ -89,12 +89,11 @@
 				longitude = <%- JSON.stringify(longitude)%>;
 				var website = [];
 				website = <%- JSON.stringify(website)%>;
-				var state = [];
-				state = <%- JSON.stringify(state)%>;
 				var image_url = [];
 				image_url = <%- JSON.stringify(image_url)%>;
 				var park_activities_code = [];
 				park_activities_code = <%- JSON.stringify(park_activities_code_array)%>;
+				console.log(park_activities_code);
 				var count = 0;    
 			  	for(var i = 0;i<latitude.length;i++){
 			  		count+=1;
