--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,14 +1,19 @@
-<nav class="navbar navbar-inverse" role="navigation" style="background-color: #0d3752;
-background-image: none;
-top:0;
-z-index:10000;
-  height:90px;
-  border-radius: 0px;
-  border-width: 0;
-  margin-bottom:0;
-  position: fixed;
-  width:100%"
-  >
-    <a href="/" style="color: white!important;font-family: 'Slabo 27px', serif;font-size:24px;display:inline-block;width:100%;text-align:center;
-    text-decoration:none!important"><img src="../img/logo.png" style="height:72px;margin-top:10px"></a>
-</nav>
+<html>
+	<body>
+		<nav class="navbar navbar-inverse" role="navigation" style="background-color: #0d3752;
+		background-image: none;
+		top:0;
+		z-index:10000;
+		  height:90px;
+		  border-radius: 0px;
+		  border-width: 0;
+		  margin-bottom:0;
+		  position: fixed;
+		  width:100%;
+		  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)"
+		  >
+		    <a href="/" style="color: white!important;font-family: 'Slabo 27px', serif;font-size:24px;display:inline-block;width:100%;text-align:center;
+		    text-decoration:none!important"><img src="../img/logo.png" style="height:72px;margin-top:10px"></a>
+		</nav>
+	</body>
+</html>
