--- a/views/search_index.ejs
+++ b/views/search_index.ejs
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/search_index.css">
 <!-- Latest compiled and minified JavaScript -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
 		<script type="text/javascript">
 			function getURLParameter(name) {
@@ -20,6 +21,10 @@
 		<div id="map"></div>
 		<h1 style="font-size: 50px;font-family: 'Slabo 27px', serif;margin-top: 80px;margin-bottom:40px;text-align: center" id="res_title">	  	
 		</h1>
+		<!-- <form action="/compare" method="get" id="compare">
+			<input type="submit" value="Compare">
+		</form> -->
+		<button class="btn btn-info" id="compare">COMPARE</button>
 		<div class="container">
 			<table id="result_table" class="table table-condensed" style="margin-bottom: 50px">
 			</table>
@@ -81,6 +86,8 @@
 					}
 				});
 			  	var infowindow = new google.maps.InfoWindow();
+			  	var park_code = [];
+			  	park_code = <%- JSON.stringify(park_code)%>;
 			  	var park_names = [];
 			  	park_names = <%- JSON.stringify(park_name)%>;
 				var latitude = [];
@@ -106,7 +113,7 @@
 				    bounds.extend(pos);
 				    var result_table = document.getElementById('result_table');
 				    var table_text = '';
-				    table_text += '<tr style="vertical-align: middle"><td class="index">'+count+'</td><td><div style="position:relative" align="left"><img src="'+image_url[i]+'" style="border-radius:50%;height:133px;width:133px;margin-left:100px" id="img"><input type="checkbox" name="thing" value="valuable" id="thing'+i+'"/><label for="thing'+i+'" id="label'+i+'"></label></div></td><td class="name">'+park_names[i]+'</td><td>';
+				    table_text += '<tr style="vertical-align: middle"><td class="index">'+count+'</td><td><div style="position:relative" align="left"><img src="'+image_url[i]+'" style="border-radius:50%;height:133px;width:133px;margin-left:100px" id="img"><input type="checkbox" name="park" value="'+park_code[i]+'" id="thing'+i+'"/><label for="thing'+i+'" id="label'+i+'"></label></div></td><td class="name">'+park_names[i]+'</td><td>';
 				    for(var j = 0;j<park_activities_code[i].length;j++){
 				    	if(park_activities_code[i][j]<100&&park_activities_code[i][j]!=24)
 						    table_text += '<img src="https://www.recreation.gov/images/activities/icon_actv_'+park_activities_code[i][j].toString()+'.png"></img>';
@@ -125,6 +132,22 @@
 						}
 					})(marker,contentString));
 				}
+				var cmp = document.getElementById('compare');
+				cmp.addEventListener('click',function(){
+					var string = '/compare?';
+					var count = 0;
+					for(i=0;i<latitude.length;i++){
+						var tag = document.getElementById("thing"+i).checked;;
+						if(tag==true){
+							string += 'park='+park_code[i]+'&';
+							count++;
+						}
+					}
+					if(count>1){
+						string = string.substring(0,string.length-1);
+						window.location.href = string;
+					}
+				},false)
 				map.mapTypes.set(customMapTypeId, customMapType);
 				map.setMapTypeId(customMapTypeId);
 				if(park_names.length!=0){
@@ -136,7 +159,7 @@
 				else{
 					document.getElementById("result_table").style.margin = "0 0 0 0";
 				}
-		    } 
+		    }
 	    </script>
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDikfTOXeaw7tQ65UFLmB-_eqV_AfqCAO4&callback=initMap&language=en"
 	  async defer></script>
