--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,5 +1,6 @@
 body{
 	margin: 0;
+	background-color: #f2f2f2;
 }
 h1{
 	font-family: 'Palanquin Dark', sans-serif;
@@ -14,8 +15,47 @@ h1{
 }
 #user_info{
 	padding:20px;
-	background-color: #d8f0f3;
+	background-color: white;
 	width:35%;
 	height:200px;
 	border-radius: 5px;
+	box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);;
 }
+#fav_list{
+	position: relative;
+	top:20px;
+	background-color: white;
+	width:35%;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);;
+}
+#fav_list ul{
+	padding: 10px;
+}
+#fav_list a{
+    font-size: 20px;
+    font-family: 'Palanquin Dark', sans-serif;
+    color: #158415!important;
+    text-decoration: none;
+    border: 1px solid #1fc71f;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background: #a7f1a7;
+}
+#fav_list input[type=submit]{
+    float: right;
+    height: 38px;
+    border: none;
+    border-radius: 4px;
+    font-size: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background: #ff8080;
+    color: white!important;
+    cursor:pointer;
+}
+
+
+
