--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -5,6 +5,8 @@ body{
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin: 0;
+	min-width: 1440px;
+	min-height: 768px;
 }
 h1{
 	text-align: center;
