--- a/src/css/park.css
+++ b/src/css/park.css
@@ -1,4 +1,6 @@
 body{
+	min-width: 1440px;
+	min-height: 768px;
 	background-color: #e6e9ef;
 }
 p{
@@ -316,7 +318,7 @@ span p{
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.19);
     display: none; 
     position: fixed;
-    top: 500px;
+    top: 300px;
     left: 40%;
     background: rgba(255,255,255,0.8);
 }
