--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,4 +1,6 @@
 body{
+    min-width:1440px;
+    min-height: 768px;
 	margin: 0;
 	background-color: #e9f4fc;
 	font-family: 'Palanquin Dark', sans-serif;
@@ -104,7 +106,7 @@ td p{
     width: 320px;
     background: #eee;
     top: 90px;
-    position: fixed;
+    position: absolute;
     text-align: center;
     z-index: 10;
     box-shadow: -5px 2px 5px #888888;
@@ -133,10 +135,10 @@ td p{
 #control{
     top: 380px;
     display: inline;
-    height: calc(100% - 380px);
+    height: 100%;
     width: 320px;
     background: #0d3752;
-    position: fixed;
+    position: absolute;
 }
 #control button{
 	width:100%;
