--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 		<title>Sign Up</title>
 		<link rel="stylesheet" type="text/css" href="../css/signup.css">
 		<link href="https://fonts.googleapis.com/css?family=Palanquin+Dark" rel="stylesheet">
